metadata/force-app/main/default/objects/Madkudu_Scoring__mdt/Madkudu_Scoring__mdt.object-meta.xml
<CustomObject>
    <label>Madkudu Scoring</label>
    <pluralLabel>Madkudu Scoring</pluralLabel>
</CustomObject>