metadata/force-app/main/default/objects/Madkudu_Scoring__mdt/fields/Madkudu_Customer_Fit_Score__c.field-meta.xml
<CustomField>
    <fullName>Madkudu_Customer_Fit_Score__c</fullName>
    <label>Madkudu Customer Fit Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>