metadata/force-app/main/default/objects/Madkudu_Scoring__mdt/fields/Madkudu_Regression__c.field-meta.xml
<CustomField>
    <fullName>Madkudu_Regression__c</fullName>
    <label>Madkudu Regression</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>